Alignment of list items is correct, image alignment and all grow/shrink values need to adjusted

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,9 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .logo {
@@ -14,6 +17,8 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  padding: 0px 4px;
 }
 
 a {
@@ -22,4 +27,16 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+}
+
+.left-links{
+  justify-content: flex-start;
+}
+
+.right-links{
+  justify-content: flex-end;
+}
+
+li{
+  margin: 8px;
 }
